--- a/src/Fluxera.Extensions.DependencyInjection.Abstractions/Fluxera.Extensions.DependencyInjection.Abstractions.csproj
+++ b/src/Fluxera.Extensions.DependencyInjection.Abstractions/Fluxera.Extensions.DependencyInjection.Abstractions.csproj
@@ -5,14 +5,10 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;validation</PackageTags>
-		<Description>The abstactions for the custom extensions for validation.</Description>
+		<PackageTags>fluxera;library;extensions;di;dependencyinjection</PackageTags>
+		<Description>The abstractions for the custom extensions for dependency injection.</Description>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
 	</PropertyGroup>
-
-	<ItemGroup>
-	  <None Remove="ValidationResult.cs~RF1f309fc8.TMP" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<Compile Include="..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
@@ -30,8 +26,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Guards" Version="6.0.5" />
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
