--- a/src/Fluxera.Extensions.Caching/Fluxera.Extensions.Caching.csproj
+++ b/src/Fluxera.Extensions.Caching/Fluxera.Extensions.Caching.csproj
@@ -5,9 +5,8 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;validation</PackageTags>
-		<Description>The abstactions for the custom extensions for validation.</Description>
-		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
+		<PackageTags>fluxera;library;extensions;caching</PackageTags>
+		<Description>The custom extensions for caching.</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -28,6 +27,15 @@
 	<ItemGroup>
 		<PackageReference Include="Fluxera.Guards" Version="6.0.5" />
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+		<PackageReference Include="System.Text.Json" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\Fluxera.Extensions.Caching.Abstractions\Fluxera.Extensions.Caching.Abstractions.csproj" />
 	</ItemGroup>
 
 </Project>
