--- a/src/Fluxera.Extensions.DataManagement.Abstractions/Fluxera.Extensions.DataManagement.Abstractions.csproj
+++ b/src/Fluxera.Extensions.DataManagement.Abstractions/Fluxera.Extensions.DataManagement.Abstractions.csproj
@@ -5,8 +5,8 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;validation</PackageTags>
-		<Description>The abstactions for the custom extensions for validation.</Description>
+		<PackageTags>fluxera;library;extensions;data</PackageTags>
+		<Description>The abstractions for the extensions for data management.</Description>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
 	</PropertyGroup>
 
@@ -26,7 +26,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Guards" Version="6.0.5" />
+		<PackageReference Include="Fluxera.Utilities" Version="6.0.4" />
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
 	</ItemGroup>
 
