--- a/src/Fluxera.Extensions.DependencyInjection/Fluxera.Extensions.DependencyInjection.csproj
+++ b/src/Fluxera.Extensions.DependencyInjection/Fluxera.Extensions.DependencyInjection.csproj
@@ -14,7 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\..\doc\Fluxera.Extensions.DependencyInjection\README.md" Link="Properties\README.md">
+		<None Include="..\..\README.md" Link="Properties\README.md">
 			<Pack>true</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
