Added OData client.

--- a/src/Fluxera.Extensions.OData.Abstractions/Fluxera.Extensions.OData.Abstractions.csproj
+++ b/src/Fluxera.Extensions.OData.Abstractions/Fluxera.Extensions.OData.Abstractions.csproj
@@ -27,6 +27,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+		<PackageReference Include="Simple.OData.Client" Version="5.26.0" />
 	</ItemGroup>
 
 	<ItemGroup>
