Modified named services to merge subsequent calls to AddNamedService method. Added named validator factory registration methods.

--- a/src/Fluxera.Extensions.Validation/Fluxera.Extensions.Validation.csproj
+++ b/src/Fluxera.Extensions.Validation/Fluxera.Extensions.Validation.csproj
@@ -31,6 +31,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Fluxera.Extensions.DependencyInjection\Fluxera.Extensions.DependencyInjection.csproj" />
 		<ProjectReference Include="..\Fluxera.Extensions.Validation.Abstractions\Fluxera.Extensions.Validation.Abstractions.csproj" />
 	</ItemGroup>
 
