--- a/src/Fluxera.Extensions.Common.Abstractions/Fluxera.Extensions.Common.Abstractions.csproj
+++ b/src/Fluxera.Extensions.Common.Abstractions/Fluxera.Extensions.Common.Abstractions.csproj
@@ -5,14 +5,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;services;common</PackageTags>
+		<Title>Fluxera.Extensions.Common.Abstractions</Title>
 		<Description>The abstractions for the common services.</Description>
+		<PackageTags>fluxera;library;extensions;services;common</PackageTags>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Compile Include="..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\README.md" Link="Properties\README.md">
@@ -26,6 +23,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	  <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
 	</ItemGroup>
 
