--- a/src/Fluxera.Extensions.Http.Abstractions/Fluxera.Extensions.Http.Abstractions.csproj
+++ b/src/Fluxera.Extensions.Http.Abstractions/Fluxera.Extensions.Http.Abstractions.csproj
@@ -5,14 +5,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;http</PackageTags>
+		<Title>Fluxera.Extensions.Http.Abstractions</Title>
 		<Description>The abstactions for the custom extensions for http client.</Description>
+		<PackageTags>fluxera;library;extensions;http</PackageTags>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Compile Include="..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\README.md" Link="Properties\README.md">
@@ -26,7 +23,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Utilities" Version="6.0.4" />
+		<PackageReference Include="Fluxera.Utilities" Version="6.0.8" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
 	</ItemGroup>
