--- a/src/Fluxera.Extensions.Localization.Abstractions/Fluxera.Extensions.Localization.Abstractions.csproj
+++ b/src/Fluxera.Extensions.Localization.Abstractions/Fluxera.Extensions.Localization.Abstractions.csproj
@@ -5,14 +5,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;localization</PackageTags>
+		<Title>Fluxera.Extensions.Localization.Abstractions</Title>
 		<Description>The abstactions for the custom extensions for localization.</Description>
+		<PackageTags>fluxera;library;extensions;localization</PackageTags>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Compile Include="..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\README.md" Link="Properties\README.md">
@@ -26,8 +23,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	  <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
-	  <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="6.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="6.0.1" />
 	</ItemGroup>
 
 </Project>
