--- a/src/Fluxera.Extensions.OData.Abstractions/Fluxera.Extensions.OData.Abstractions.csproj
+++ b/src/Fluxera.Extensions.OData.Abstractions/Fluxera.Extensions.OData.Abstractions.csproj
@@ -5,14 +5,11 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageTags>fluxera;library;extensions;http;odata</PackageTags>
+		<Title>Fluxera.Extensions.OData.Abstractions</Title>
 		<Description>The abstactions for the custom extensions for odata client.</Description>
+		<PackageTags>fluxera;library;extensions;http;odata</PackageTags>
 		<RootNamespace>$(MSBuildProjectName.Replace(" ", "_").Replace(".Abstractions",""))</RootNamespace>
 	</PropertyGroup>
-
-	<ItemGroup>
-		<Compile Include="..\SolutionInfo.cs" Link="Properties\SolutionInfo.cs" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\..\README.md" Link="Properties\README.md">
@@ -26,6 +23,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="GitVersion.MsBuild" Version="5.8.1">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
 		<PackageReference Include="Simple.OData.Client" Version="5.26.0" />
 	</ItemGroup>
