--- a/tests/Fluxera.Extensions.Http.UnitTests/Fluxera.Extensions.Http.UnitTests.csproj
+++ b/tests/Fluxera.Extensions.Http.UnitTests/Fluxera.Extensions.Http.UnitTests.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Fluxera.Extensions.Http\Fluxera.Extensions.Http.csproj" />
+  </ItemGroup>
+
 </Project>
