--- a/tests/Fluxera.Extensions.OData.UnitTests/Fluxera.Extensions.OData.UnitTests.csproj
+++ b/tests/Fluxera.Extensions.OData.UnitTests/Fluxera.Extensions.OData.UnitTests.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Fluxera.Extensions.OData\Fluxera.Extensions.OData.csproj" />
+  </ItemGroup>
+
 </Project>
