--- a/src/Fluxera.Extensions.DependencyInjection.Abstractions/Fluxera.Extensions.DependencyInjection.Abstractions.csproj
+++ b/src/Fluxera.Extensions.DependencyInjection.Abstractions/Fluxera.Extensions.DependencyInjection.Abstractions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -23,7 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Guards" Version="7.0.2" />
+		<PackageReference Include="Fluxera.Guards" Version="7.0.3" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.11.1">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
