--- a/src/Fluxera.Extensions.DependencyInjection.Abstractions/Fluxera.Extensions.DependencyInjection.Abstractions.csproj
+++ b/src/Fluxera.Extensions.DependencyInjection.Abstractions/Fluxera.Extensions.DependencyInjection.Abstractions.csproj
@@ -23,12 +23,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Guards" Version="8.0.1" />
+		<PackageReference Include="Fluxera.Guards" Version="8.0.2" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
+		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
 	</ItemGroup>
 
