--- a/src/Fluxera.Extensions.OData.Abstractions/Fluxera.Extensions.OData.Abstractions.csproj
+++ b/src/Fluxera.Extensions.OData.Abstractions/Fluxera.Extensions.OData.Abstractions.csproj
@@ -27,7 +27,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
+		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
 		<PackageReference Include="Simple.OData.Client" Version="6.0.1" />
 	</ItemGroup>
 
