--- a/src/Fluxera.Extensions.Validation.DataAnnotations/Fluxera.Extensions.Validation.DataAnnotations.csproj
+++ b/src/Fluxera.Extensions.Validation.DataAnnotations/Fluxera.Extensions.Validation.DataAnnotations.csproj
@@ -26,6 +26,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
 	</ItemGroup>
 
