--- a/src/Fluxera.Extensions.Validation/Fluxera.Extensions.Validation.csproj
+++ b/src/Fluxera.Extensions.Validation/Fluxera.Extensions.Validation.csproj
@@ -22,6 +22,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="11.9.1" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
 		<PackageReference Include="Fluxera.Utilities" Version="8.0.4" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
 		  <PrivateAssets>all</PrivateAssets>
