--- a/src/Fluxera.Extensions.Http.Abstractions/Fluxera.Extensions.Http.Abstractions.csproj
+++ b/src/Fluxera.Extensions.Http.Abstractions/Fluxera.Extensions.Http.Abstractions.csproj
@@ -23,13 +23,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Utilities" Version="8.0.4" />
+		<PackageReference Include="Fluxera.Utilities" Version="8.0.*" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 	</ItemGroup>
 
 </Project>
