--- a/src/Fluxera.Extensions.Localization.Abstractions/Fluxera.Extensions.Localization.Abstractions.csproj
+++ b/src/Fluxera.Extensions.Localization.Abstractions/Fluxera.Extensions.Localization.Abstractions.csproj
@@ -23,12 +23,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	  </PackageReference>
-	  <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-	  <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.4" />
+		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.*" />
 	</ItemGroup>
 
 </Project>
