--- a/src/Fluxera.Extensions.Validation/Fluxera.Extensions.Validation.csproj
+++ b/src/Fluxera.Extensions.Validation/Fluxera.Extensions.Validation.csproj
@@ -22,15 +22,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FluentValidation" Version="11.9.1" />
-		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
-		<PackageReference Include="Fluxera.Utilities" Version="8.0.4" />
+		<PackageReference Include="FluentValidation" Version="11.9.*" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.*" />
+		<PackageReference Include="Fluxera.Utilities" Version="8.0.*" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
