--- a/src/Fluxera.Extensions.DataManagement/Fluxera.Extensions.DataManagement.csproj
+++ b/src/Fluxera.Extensions.DataManagement/Fluxera.Extensions.DataManagement.csproj
@@ -27,11 +27,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.*" />
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
