--- a/src/Fluxera.Extensions.DependencyInjection/Fluxera.Extensions.DependencyInjection.csproj
+++ b/src/Fluxera.Extensions.DependencyInjection/Fluxera.Extensions.DependencyInjection.csproj
@@ -22,16 +22,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Fluxera.Guards" Version="8.0.*" />
-		<PackageReference Include="Fluxera.Utilities" Version="8.0.*" />
 		<PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="JetBrains.Annotations" Version="2023.3.0" PrivateAssets="All" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.*" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.*" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
